--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.06.2022 08:43:43</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.06.2022 09:11:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -147,7 +147,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny cerstvy jihocesky pstruh s orechovym pestem, libanonsky krupkovy salat s cerstvymi okurkami, zelenou cibulkou, rajcaty a citrony {L} 149</li><li>Peceny filet z cerstve norske tresky s orechovym pestem, libanonsky krupkovy salat s cerstvymi okurkami, zelenou cibulkou, rajcaty a citrony {L} 175</li><li>Nam tok – thajsky salat z hovezich steaku s matou, salotkou, chilli a limetkami, ryzove nudle, listovy salatek 149</li><li>Burrito s pecenym divocakem, zlutymi rajcaty a rimskym salatem, jogurtovy dip, korenena ryze,  listovy salatek 175</li><li>Kvetakovo-kapustove placicky s petrzelkou a muskatem, stouchane brambory se zelenou cibulkou, tatarska omacka, {L} 149</li></ol>
+<ol><li>Thieboudienne – senegalska kulata ryze s kousky ryb, pecenou zeleninou a rajcaty, salatek 149</li><li>Peceny filet z cerstveho norskeho lososa s koprovo-citronovou jogurtovou omackou, stouchane brambory se zelenou cibulkou, listovy salatek 175</li><li>Kousky peceneho kohouta {bez kosti} v thajske arasidove omacce s pecenymi paprikami a kokosovym mlekem, jasminova ryze, listovy salatek 149</li><li>Medailonky z teleci kyty s kaparami a citrony, stouchane brambory se zelenou cibulkou, listovy salatek 175</li><li>Burrito s pikantnim fazolovym chilli s pecenymi paprikami a chipotle, krupkovy salat s cerstvou zeleninou a bylinkami, listovy salatek {L} 149</li></ol>
 </td>
 </tr>
 </table>
