--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.06.2022 09:36:06</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.06.2022 10:16:32</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -63,7 +63,7 @@
 <div class="clear"></div>
 </li>
 <li class="poznamka">
-<div class="polozka">Jáhlový puding s hruškovým pyré </div>
+<div class="polozka">Jáhlový puding s hruškovým pyré bez lepku a laktózy</div>
 <div class="cena">65 Kč</div>
 <div class="clear"></div>
 </li>
@@ -103,7 +103,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Holandský sekaný řízek, zauzenáabramborova bramborová kaše, okurkový relish <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Holandský sekaný řízek, zauzená bramborová kaše, okurkový relish <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">165 Kč</div>
 <div class="clear"></div>
 </li>
